@@ -53,6 +53,7 @@ Features added
 * #9097: Optimize the paralell build
 * #9131: Add :confval:`nitpick_ignore_regex` to ignore nitpicky warnings using
   regular expressions
+* C++, add support for inline variables.
 
 
 Bugs fixed
